--- a/pom.xml
+++ b/pom.xml
@@ -6,80 +6,75 @@
   <name>Proyecto</name>
   <description>mi primer proyecto de Maven</description>
 
-<dependencies>
+	<dependencies>
+	
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>6.0.6</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		</dependency>
+	
+	</dependencies>
 
-<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-<dependency>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>6.0.6</version>
-</dependency>
-
-<!-- https://mvnrepository.com/artifact/junit/junit -->
-<dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.12</version>
-    <scope>test</scope>
-</dependency>
-
-</dependencies>
-
-<reporting>
-<plugins>
-<plugin>
-<groupId>org.codehaus.mojo</groupId>
-<artifactId>cobertura-maven-plugin</artifactId>
-<version>2.6</version>
-</plugin>
-</plugins>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+			</plugin>
+		</plugins>
 </reporting>
 <!--  FIN:Para usar el GOAL de reporting de cobertura  -->
-<!--
- Para ejecutar el GOAL de CHECK en caso de cobertura 
--->
-<build>
-<plugins>
-<plugin>
-<groupId>org.codehaus.mojo</groupId>
-<artifactId>cobertura-maven-plugin</artifactId>
-<version>2.6</version>
-<configuration>
-<check>
-<branchRate>30</branchRate>
-<!--  % de ramas por clase  -->
-<lineRate>30</lineRate>
-<!--  % de líneas por clase  -->
-<haltOnFailure>true</haltOnFailure>
-<totalBranchRate>30</totalBranchRate>
-<!--  % de ramas por proyecto  -->
-<totalLineRate>30</totalLineRate>
-<!--  % de líneas por proyecto  -->
-<packageLineRate>10</packageLineRate>
-<!--  % de líneas por paquete  -->
-<packageBranchRate>10</packageBranchRate>
-<!--  % de ramas por paquete  -->
-<regexes>
-<!--  <regex>
-Más restricivo por paquete P1 
-pattern>spq.deusto.es.P1.*</pattern>
-<branchRate>70</branchRate>
-<lineRate>70</lineRate>
-</regex>-->
-<!-- <regex>
- Más restricivo por paquete P2  
- <pattern>spq.deusto.es.P2.*</pattern>
-<branchRate>60</branchRate>
-<lineRate>60</lineRate>
-</regex>-->
-
-</regexes>
-</check>
-</configuration>
-</plugin>
-</plugins>
-</build>
-
-
-
+<!-- Para ejecutar el GOAL de CHECK en caso de cobertura -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+				<check>
+					<branchRate>30</branchRate>
+					<!--  % de ramas por clase  -->
+					<lineRate>30</lineRate>
+					<!--  % de líneas por clase  -->
+					<haltOnFailure>true</haltOnFailure>
+					<totalBranchRate>30</totalBranchRate>
+					<!--  % de ramas por proyecto  -->
+					<totalLineRate>30</totalLineRate>
+					<!--  % de líneas por proyecto  -->
+					<packageLineRate>10</packageLineRate>
+					<!--  % de líneas por paquete  -->
+					<packageBranchRate>10</packageBranchRate>
+					<!--  % de ramas por paquete  -->
+					<regexes>
+					<!--  <regex>
+					Más restricivo por paquete P1 
+					pattern>spq.deusto.es.P1.*</pattern>
+					<branchRate>70</branchRate>
+					<lineRate>70</lineRate>
+					</regex>-->
+					<!-- <regex>
+					 Más restricivo por paquete P2  
+					 <pattern>spq.deusto.es.P2.*</pattern>
+					<branchRate>60</branchRate>
+					<lineRate>60</lineRate>
+					</regex>-->
+					
+					</regexes>
+					</check>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
