--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
-		    <version>6.0.6</version>
+		    <version>5.1.6</version>
 		</dependency>
 		
+	
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 		    <groupId>junit</groupId>
@@ -106,6 +107,13 @@
 		             </execution>
 		         </executions>
 		     </plugin>
+		     
+			  <!-- To define the plugin version in your parent POM -->
+	           <plugin>
+	          <groupId>com.soebes.maven.plugins</groupId>
+	          <artifactId>doxygen-maven-plugin</artifactId>
+	          <version>1.1.0</version>
+	       	</plugin>      
 		</plugins>
 	</build>
 </project>
