--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>Academia</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Proyecto</name>
-  <description>mi primer proyecto de Maven</description>
+  <description>Proyecto de Procesos soft y calidad con Maven</description>
 
 <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -27,6 +27,12 @@
 		    <artifactId>junit</artifactId>
 		    <version>4.12</version>
 		    <scope>test</scope>
+		</dependency>
+	
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 	
 	</dependencies>
