--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,15 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-	
+		
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.8.9</version>
+		    <scope>test</scope>
+		</dependency>
+			
 	</dependencies>
 
 	<reporting>
@@ -106,7 +114,7 @@
 		             </descriptorRefs>
 		             <archive>
 		                 <manifest>
-		                     <mainClass>paquete.paquete.claseMain</mainClass>
+		                     <mainClass>main.Main</mainClass>
 		                 </manifest>
 		             </archive>
 		         </configuration>
