--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,11 @@
   <name>Proyecto</name>
   <description>Proyecto de Procesos soft y calidad con Maven</description>
 
-<properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+	<properties>
+	    <maven.compiler.source>1.8</maven.compiler.source>
+	    <maven.compiler.target>1.8</maven.compiler.target>
+	    <doxygen.config.file>${basedir}/src/main/resources/Doxyfile</doxygen.config.file>
+	</properties>
 
 	<dependencies>
 	
@@ -34,21 +35,27 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-	
+		
+		<!--he incluido esta dependencia porque me daba error al generar la documentacion de cobertura-->
+		<dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>5.0.3</version>
+        </dependency>
+        	
 	</dependencies>
-
+	<!--  Para usar el GOAL de reporting de cobertura  -->
 	<reporting>
 		<plugins>
-				
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.6</version>
 			</plugin>
 		</plugins>
-</reporting>
-<!--  FIN:Para usar el GOAL de reporting de cobertura  -->
-<!-- Para ejecutar el GOAL de CHECK en caso de cobertura -->
+	</reporting>
+	<!--  FIN:Para usar el GOAL de reporting de cobertura  -->
+	<!-- Para ejecutar el GOAL de CHECK en caso de cobertura -->
 	<build>
 		<plugins>
 			<plugin>
@@ -56,7 +63,7 @@
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-				<check>
+					<check>
 					<branchRate>30</branchRate>
 					<!--  % de ramas por clase  -->
 					<lineRate>30</lineRate>
@@ -71,19 +78,18 @@
 					<packageBranchRate>10</packageBranchRate>
 					<!--  % de ramas por paquete  -->
 					<regexes>
-					<!--  <regex>
-					Más restricivo por paquete P1 
-					pattern>spq.deusto.es.P1.*</pattern>
+					<regex>
+					<!--  Más restricivo por paquete P1  -->
+					<pattern>spq.deusto.es.P1.*</pattern>
 					<branchRate>70</branchRate>
 					<lineRate>70</lineRate>
-					</regex>-->
-					<!-- <regex>
-					 Más restricivo por paquete P2  
-					 <pattern>spq.deusto.es.P2.*</pattern>
+					</regex>
+					<regex>
+					<!--  Más restricivo por paquete P2  -->
+					<pattern>spq.deusto.es.P2.*</pattern>
 					<branchRate>60</branchRate>
 					<lineRate>60</lineRate>
-					</regex>-->
-					
+					</regex>
 					</regexes>
 					</check>
 				</configuration>
@@ -106,7 +112,7 @@
 		             </descriptorRefs>
 		             <archive>
 		                 <manifest>
-		                     <mainClass>paquete.paquete.claseMain</mainClass>
+		                     <mainClass>main.Main</mainClass>
 		                 </manifest>
 		             </archive>
 		         </configuration>
@@ -122,9 +128,12 @@
 		     
 			  <!-- To define the plugin version in your parent POM -->
 	           <plugin>
-	          <groupId>com.soebes.maven.plugins</groupId>
-	          <artifactId>doxygen-maven-plugin</artifactId>
-	          <version>1.1.0</version>
+	                <groupId>com.soebes.maven.plugins.dmg</groupId>
+					<artifactId>doxygen-maven-plugin</artifactId>
+					<version>1.0.1</version>
+					<configuration>
+			        	<configurationFile>${doxygen.config.file}</configurationFile>
+					</configuration>
 	       	</plugin>      
 		</plugins>
 	</build>
