--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,14 @@
             <artifactId>asm</artifactId>
             <version>5.0.3</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.8.9</version>
+		    <scope>test</scope>
+		</dependency>
         	
 	</dependencies>
 	<!--  Para usar el GOAL de reporting de cobertura  -->
@@ -130,7 +138,7 @@
 	           <plugin>
 	                <groupId>com.soebes.maven.plugins.dmg</groupId>
 					<artifactId>doxygen-maven-plugin</artifactId>
-					<version>1.0.1</version>
+					<version>1.1.0</version>
 					<configuration>
 			        	<configurationFile>${doxygen.config.file}</configurationFile>
 					</configuration>
