--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,16 @@
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.6</version>
 			</plugin>
+					
 			<plugin>
-		      <groupId>com.soebes.maven.plugins</groupId>
-		      <artifactId>doxygen-maven-plugin</artifactId>
-		      <version>1.1.0</version>
-		    </plugin>
-			
+			      <groupId>com.soebes.maven.plugins</groupId>
+			      <artifactId>doxygen-maven-plugin</artifactId>
+			      <version>1.1.0</version>
+			      <configuration>
+                    <projectname>Academia</projectname>
+                    <configurationFile>target/site/doxygen.config</configurationFile>
+               </configuration>
+			</plugin>
 		</plugins>
 	</reporting>
 	<!--  FIN:Para usar el GOAL de reporting de cobertura  -->
@@ -159,9 +163,13 @@
 		         </executions>
 		     </plugin>
 		      <plugin>
-	        <groupId>com.soebes.maven.plugins</groupId>
-	        <artifactId>doxygen-maven-plugin</artifactId>
-	        <version>1.1.0</version>
+		        <groupId>com.soebes.maven.plugins</groupId>
+		        <artifactId>doxygen-maven-plugin</artifactId>
+		         <version>1.1.0</version>
+		         <configuration>
+			        <configurationFile>${doxygen.config.file}</configurationFile>
+				</configuration>
+		         
 	    	  </plugin>  
 			    
 		</plugins>
